scenarios/scenario-13/S02-APIM_for_Istio_Services_MTLS/gateway-virtualservice.yaml
#Copyright (c)  WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# WSO2 Inc. licenses this file to you under the Apache License,
# Version 2.0 (the "License"); you may not use this file except
# in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demo-gateway
  namespace: micro
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s01-virtualservice
  namespace: micro
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - match:
        - uri:
            prefix: "/storemep/v1.0.0/products"
      rewrite:
        uri: "/products"
      route:
        - destination:
            host: products
            port:
              number: 80
    - match:
        - uri:
            prefix: "/storemep/v1.0.0/review"
      rewrite:
        uri: "/review"
      route:
        - destination:
            host: review
            port:
              number: 80
    - match:
        - uri:
            prefix: "/storemep/v1.0.0/inventory"
      rewrite:
        uri: "/inventory"
      route:
        - destination:
            host: inventory
            port:
              number: 80
