scenarios/scenario-13/S02-APIM_for_Istio_Services_MTLS/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: s01-virtualservice
  namespace: micro
spec:
  hosts:
    - "*"
  gateways:
    - demo-gateway
  http:
    - match:
        - uri:
            prefix: "/storemep/v1.0.0/products"
      rewrite:
        uri: "/products"
      route:
        - destination:
            host: products
            port:
              number: 80
    - match:
        - uri:
            prefix: "/storemep/v1.0.0/review"
      rewrite:
        uri: "/review"
      route:
        - destination:
            host: review
            port:
              number: 80
    - match:
        - uri:
            prefix: "/storemep/v1.0.0/inventory"
      rewrite:
        uri: "/inventory"
      route:
        - destination:
            host: inventory
            port:
              number: 80
